<resources>
    <string name="app_name">TripInAja</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello this is home fragment</string>
    <string name="to_category">To Category</string>
    <string name="creator">DANANG IPUL BASRIN</string>
    <string name="desc_profile">Lulusan Manajemen Informatika Politeknik Harapan Bangsa Surakarta dengan IPK 3,86 | Berpengalaman dibidang Akuntansi selama lebih dari 3 tahun menyelesaikan semua tugas yang diberikan secara akurat dan efisien | Bersemangat untuk mempelajari hal-hal baru dan menghadapi tantangan apapun | Baik dalam kerja individu dan kerja tim untuk memecahkan masalah | Antusias tentang Pengembangan Perangkat Lunak, Akuntansi dan Keuangan.</string>
    <string name="separator">|</string>
    <string name="listDestinations">Daftar Wisata di Pulau Bali</string>
    <string name="sayHello">Halo, Danang Ipul Basrin!</string>
    <string name="aboutMe">Tentang Saya</string>
    <string name="address">Alamat</string>
    <string name="openTime">Jam Buka</string>
    <string name="openDay">Hari Buka</string>
    <string name="sep">:</string>

</resources>