<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_img_dtl"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_arrow" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_map_dtl"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_map" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_name_dtl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorDark"
            tools:text="Destination name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/tv_category_dtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDark"
                android:textSize="16sp"
                tools:text="Category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="@color/colorDark"
                android:layout_marginRight="2dp"
                android:text="@string/separator"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_rating_dtl"
                android:layout_width="wrap_content"
                android:textColor="@color/colorDark"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="Rating" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDark"
                    android:text="@string/address"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorDark"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_address_dtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorDark"
                    tools:text="Address" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDark"
                    android:text="@string/openDay"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorDark"
                    android:layout_marginEnd="5dp"
                    android:text="@string/sep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_openday_dtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp"
                    tools:text="Open Day" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDark"
                    android:text="@string/openTime"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/colorDark"
                    android:text="@string/sep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_opentime_dtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp"
                    tools:text="Open Time" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tv_description_dtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorDark"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            tools:text="Description" />
    </LinearLayout>

</ScrollView>
