<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/coolcaps_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginStart="48dp"
            app:titleEnabled="false">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@color/colorMid"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="?attr/actionBarSize"
                        android:src="@drawable/profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:text="@string/creator"
                        android:textColor="@color/colorDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="280dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorDark"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/gmail_profile"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_gmail"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="3dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/instagram_profile"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_instagram"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="3dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/github_profile"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_github"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="3dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/linkedin_profile"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_linkedin"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="3dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="350dp"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorDark"
                        android:text="@string/aboutMe"
                        android:textSize="17sp"
                        android:layout_marginBottom="5dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDark"
                        android:textAlignment="center"
                        android:text="@string/desc_profile"/>

                </LinearLayout>

            </RelativeLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
